--- a/blog.html
+++ b/blog.html
@@ -20,7 +20,7 @@
         <nav class="py-6 bg-[#F9F7F3]">
           <div class="container mx-auto">
             <ul class="flex justify-between items-center">
-            <li><a href="" class="btn bg-[#B4F461] text-[#111111] text-xl font-semibold">Blog</a></li>
+            <li><a href="./index.html" class="btn bg-[#B4F461] text-[#111111] text-xl font-semibold">Home</a></li>
             <li class="flex gap-4 items-center">
               <img src="./assets/logo.png" alt="" /><span class="text-[#111111] text-xl font-semibold">Donate
                 Bangladesh</span>
@@ -66,6 +66,9 @@
             </div>
         </div>
     </section>
+    <footer class="footer footer-center p-4 bg-[#F9F7F3]">
+        <p>Copyright © 2024 - All right reserved by Donation Bangladesh</p>
+      </footer>
     <script src="./main.js"></script>
 </body>
 
