--- a/index.html
+++ b/index.html
@@ -19,106 +19,77 @@
     <nav class="py-6 bg-[#F9F7F3]">
       <div class="container mx-auto">
         <ul class="flex justify-between items-center">
-        <li><a href="" class="btn bg-[#B4F461] text-[#111111] text-xl font-semibold">Blog</a></li>
-        <li class="flex gap-4 items-center">
-          <img src="./assets/logo.png" alt="logo" /><span class="text-[#111111] text-xl font-semibold">Donate
-            Bangladesh</span>
-        </li>
-        <li class="flex gap-2 items-center">
-          <img src="./assets/coin.png" alt="coin" /><span id="total-amount" class="text-[#111111b3] text-xl font-medium">5500</span><span class="text-[#111111b3] text-xl font-medium">BDT</span>
-        </li>
-      </ul>
-    </div>
+          <li><button id="blog-btn" onclick="moveTopage('blog.html')" class="btn bg-[#B4F461] text-[#111111] text-xl font-semibold">Blog</button></li>
+          <li class="flex gap-4 items-center">
+            <img src="./assets/logo.png" alt="logo" /><span class="text-[#111111] text-xl font-semibold">Donate
+              Bangladesh</span>
+          </li>
+          <li class="flex gap-2 items-center">
+            <img src="./assets/coin.png" alt="coin" /><span id="main-balance"
+              class="text-[#111111b3] text-xl font-medium">5500</span><span
+              class="text-[#111111b3] text-xl font-medium">BDT</span>
+          </li>
+        </ul>
+      </div>
     </nav>
     <div class="backdrop-blur bg-white/80 flex justify-center gap-4 py-10">
-      <button class="btn text-xl font-semibold text-[#111111] bg-[#B4F461]">Donation</button>
-      <button class= "btn btn-outline text-xl font-medium text-[#111111b3] border-[#1111114d] border bg-none">History</button>
+      <button id="donate-btn" class="btn text-xl font-semibold text-[#111111] bg-[#B4F461]">
+        Donation
+      </button>
+      <button id="history-btn"
+        class="btn btn-outline text-xl font-medium text-[#111111b3] border-[#1111114d] border bg-none">History</button>
     </div>
   </header>
 
-    <section class="donation-section mt-20">
-      <div class="container mx-auto flex gap-8 flex-col items-center">
-        <div class="flex gap-8 items-center border-gray-200 border rounded-xl p-8">
-          <figure>
-            <img src="./assets/noakhali.png" alt="Noakhali Flood 2024" />
-          </figure>
-          <div class="w-1/2 flex flex-col">
-            <div class="flex items-center gap-2">
-              <img src="./assets/coin.png" alt="coin" /><span id="noakhali-amount" class="">0<span>BDT</span></span>
-            </div>
-            <h2 class="my-4 text-[#111111] text-xl font-bold">
-              Donate for Flood at Noakhali, Bangladesh
-            </h2>
-            <p class="text-[#111111b3] font-light">
-              The recent floods in Noakhali have caused significant damage to
-              homes infrastructure. Your donation will help provide essential
-              supplies and to those affected by this disaster. Every
-              contribution, big or small, makes difference. Please join us in
-              supporting the relief efforts and making a positive impact on
-              the lives of those in need.
-            </p>
-            <input id="noakhali-input" type="text" placeholder="Write Donation Amount" class="input input-bordered w-full mt-8 mb-4" />
-            <button id="noakhali-btn" class="btn w-full text-xl font-semibold text-[#111111] bg-[#B4F461]" href="">
-              Donate Now
-            </button>
-            <dialog id="my_modal" class="modal">
-              <div class="modal-box w-1/2 max-w-5xl mx-auto flex items-center flex-col">
-                <h3 class="text-5xl text-[#111111] font-bold">Congrats!</h3>
-                <img class="my-4" src="./assets/coin.png" alt="">
-                <p class="">You have donated for Humankind</p>
-                <p class="py-4 font-bold text-[#111111]">Successfully!</p>
+  <section id="donate-section" class="mt-20">
+    <div class="container mx-auto flex gap-8 flex-col items-center">
+      <div class="flex flex-col md:flex-row gap-6 justify-between items-center border-gray-200 border rounded-xl p-8">
+        <figure><img src="./assets/noakhali.png" alt="Noakhali Flood 2024" /></figure>
+        <div class="w-1/2 flex flex-col">
+          <div class="badge flex items-center gap-2 border-none bg-gray-100 px-4 py-6 rounded-lg">
+            <img src="./assets/coin.png" alt="coin" />
+            <span id="n-amount" class="text-[#111111b2] text-lg">0</span>
+            <span class="text-[#111111b2] text-lg">BDT</span>
+          </div>
+          <h2 class="my-4 text-[#111111] text-xl font-bold">
+            Donate for Flood at Noakhali, Bangladesh
+          </h2>
+          <p class="text-[#111111b3] font-light">
+            The recent floods in Noakhali have caused significant damage to
+            homes infrastructure. Your donation will help provide essential
+            supplies and to those affected by this disaster. Every
+            contribution, big or small, makes difference. Please join us in
+            supporting the relief efforts and making a positive impact on
+            the lives of those in need.
+          </p>
+          <input id="n-input" type="number" placeholder="Write Donation Amount"
+            class="input input-bordered w-full mt-8 mb-4" />
+          <button id="n-btn" class="btn w-full text-xl font-semibold text-[#111111] bg-[#B4F461]" href="">
+            Donate Now
+          </button>
+          <!-- modal -->
+          <dialog id="my_modal" class="modal">
+            <div class="modal-box p-10 flex justify-center items-center flex-col">
+                <h3 class="text-2xl font-bold pb-3">Congratulations!</h3>
+                <img src="assets/coin.png" alt="">
+                <p class="py-4">Your Contribution Has Supported Humanity.</p>
+                <p class="text-lg font-bold">Successfully</p>
                 <div class="modal-action">
-                  <form method="dialog">
-                    <!-- if there is a button, it will close the modal -->
-                    <button class="btn">Close</button>
-                  </form>
+                    <form method="dialog">
+                        <button class="btn bg-lime-300 hover:bg-black hover:text-white">Close Confirmation</button>
+                    </form>
                 </div>
-              </div>
-            </dialog>
-          </div>
-        </div>
-        <div class="flex gap-8 items-center border-gray-200 border rounded-xl p-8">
-          <figure>
-            <img src="./assets/feni.png" alt="Feni Flood 2024" />
-          </figure>
-          <div class="w-1/2 flex flex-col">
-            <div class="flex items-center gap-2">
-              <img src="./assets/coin.png" alt="" /><span id="" class="">0 <span>BDT</span></span>
             </div>
-            <h2 class="my-4 text-[#111111] text-xl font-bold">
-              Donate for Flood Relief in Feni, Bangladesh
-            </h2>
-            <p class="text-[#111111b3] font-light">
-              The recent floods in Feni have devastated local communities, leading to severe disruption and loss. Your generous donation will help provide immediate aid, including food, clean water, and medical supplies, to those affected by this calamity. Together, we can offer crucial support and help rebuild lives in the aftermath of this disaster. Every contribution counts towards making a real difference. Please consider donating today to assist those in urgent need.
-            </p>
-            <input type="text" placeholder="Write Donation Amount" class="input input-bordered w-full mt-8 mb-4" />
-            <button class="btn w-full text-xl font-semibold text-[#111111] bg-[#B4F461]" href="">
-              Donate Now
-            </button>
-          </div>
-        </div>
-        <div class="flex gap-8 items-center border-gray-200 border rounded-xl p-8">
-          <figure>
-            <img src="./assets/quota-protest.png" alt="Quota Protest 2024" />
-          </figure>
-          <div class="w-1/2 flex flex-col">
-            <div class="flex items-center gap-2">
-              <img src="./assets/coin.png" alt="" /><span id="" class="">0 <span>BDT</span></span>
-            </div>
-            <h2 class="my-4 text-[#111111] text-xl font-bold">
-              Aid for Injured in the Quota Movement
-            </h2>
-            <p class="text-[#111111b3] font-light">
-              The recent Quota movement has resulted in numerous injuries and significant hardship for many individuals. Your support is crucial in providing medical assistance, rehabilitation, and necessary supplies to those affected. By contributing, you help ensure that injured individuals receive the care and support they need during this challenging time. Every donation plays a vital role in alleviating their suffering and aiding in their recovery. Please consider making a donation to support these brave individuals in their time of need.
-            </p>
-            <input id="" type="text" placeholder="Write Donation Amount" class="input input-bordered w-full mt-8 mb-4" />
-            <button id="" class="btn w-full text-xl font-semibold text-[#111111] bg-[#B4F461]" href="">
-              Donate Now
-            </button>
-          </div>
+        </dialog>
         </div>
       </div>
-    </section>
+    </div>
+  </section>
+  <section id="history-section" class='container mx-auto'>
+  </section>
+  <footer class="footer footer-center p-4 bg-[#F9F7F3]">
+    <p class="w-full">Copyright © 2024 - All right reserved by Donation Bangladesh</p>
+  </footer>
 
   <script src="./main.js"></script>
 </body>
