--- a/blog.html
+++ b/blog.html
@@ -20,13 +20,15 @@
         <nav class="py-6 bg-[#F9F7F3]">
           <div class="container mx-auto">
             <ul class="flex justify-between items-center">
-            <li><a href="./index.html" class="btn bg-[#B4F461] text-[#111111] text-xl font-semibold">Home</a></li>
-            <li class="flex gap-4 items-center">
-              <img src="./assets/logo.png" alt="" /><span class="text-[#111111] text-xl font-semibold">Donate
+            <li><a href="./index.html" class="btn bg-[#B4F461] text-[#111111] text-base md:text-xl font-semibold">Home</a></li>
+            <li class="flex gap-2 md:gap-4 items-center">
+              <img src="./assets/logo.png" alt="" /><span class="text-[#111111] text-base md:text-xl font-semibold">Donate
                 Bangladesh</span>
             </li>
-            <li class="flex gap-3 items-center">
-              <img src="./assets/coin.png" alt="" /><span class="text-[#111111b3] text-xl font-medium">5500</span><span class="text-[#111111b3] text-xl font-medium">BDT</span>
+            <li class="flex gap-1 md:gap-2 items-center">
+              <img src="./assets/coin.png" alt="" />
+              <span class="text-[#111111b3] text-sm md:text-xl font-medium">5500</span>
+              <span class="text-[#111111b3] text-sm md:text-xl font-medium">BDT</span>
             </li>
           </ul>
         </div>
@@ -38,21 +40,21 @@
             <div class="flex flex-col gap-4">
                 <div class="collapse collapse-arrow border border-gray-300 rounded-lg">
                     <input type="radio" name="my-accordion-2" checked="checked" />
-                    <div class="collapse-title text-xl font-semibold text-[#111111]">What is the Document Object Model (DOM)?</div>
+                    <div class="collapse-title text-lg md:text-xl font-semibold text-[#111111]">What is the Document Object Model (DOM)?</div>
                     <div class="collapse-content">
                         <p class="font-light">DOM is essential for creating dynamic and interactive web pages. It provides a way for JavaScript to communicate with the HTML structure and manipulate it to achieve desired effects.</p>
                     </div>
                 </div>
                 <div class="collapse collapse-arrow border border-gray-300 rounded-lg">
                     <input type="radio" name="my-accordion-2" />
-                    <div class="collapse-title text-xl font-semibold text-[#111111]">How do you select an element from the DOM?</div>
+                    <div class="collapse-title text-lg md:text-xl font-semibold text-[#111111]">How do you select an element from the DOM?</div>
                     <div class="collapse-content">
                         <p class="font-light">To select an element from the DOM, you can use several methods provided by JavaScript-  getElementById(), getElementsByTagName(),getElementsByClassName(), querySelector(), and querySelectorAll()</p>
                     </div>
                 </div>
                 <div class="collapse collapse-arrow border border-gray-300 rounded-lg">
                     <input type="radio" name="my-accordion-2" />
-                    <div class="collapse-title text-xl font-semibold text-[#111111]">What is event delegation in the context of the DOM, and why is it useful?</div>
+                    <div class="collapse-title text-lg md:text-xl font-semibold text-[#111111]">What is event delegation in the context of the DOM, and why is it useful?</div>
                     <div class="collapse-content">
                         <p class="font-light">Event delegation is a technique where a single event listener is attached to a parent element to handle events on its child elements. This improves performance, handles dynamically added elements, and simplifies code by reducing the number of event listeners.</p>
                     </div>
@@ -60,7 +62,7 @@
                 
                 <div class="collapse collapse-arrow border border-gray-300 rounded-lg">
                     <input type="radio" name="my-accordion-2" />
-                    <div class="collapse-title text-xl font-semibold text-[#111111]">How do you manipulate an element's attributes and styles using the DOM?</div>
+                    <div class="collapse-title text-lg md:text-xl font-semibold text-[#111111]">How do you manipulate an element's attributes and styles using the DOM?</div>
                     <div class="collapse-content">
                         <p class="font-light">To manipulate an element's attributes and styles-setAttribute() and removeAttribute() to modify attributes like href, disabled, etc. To change inline styles, directly access the style property. For class-based styling, use classList.add(), classList.remove(), and classList.toggle(). By combining these methods, JS can dynamically alter the appearance and behavior of web elements.</p>
                     </div>
