--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
     <nav class="py-6 bg-[#F9F7F3]">
       <div class="container mx-auto">
         <ul class="flex justify-between items-center">
-          <li><button id="blog-btn" onclick="moveTopage('blog.html')" class="btn bg-[#B4F461] text-[#111111] text-xl font-semibold">Blog</button></li>
-          <li class="flex gap-4 items-center">
-            <img src="./assets/logo.png" alt="logo" /><span class="text-[#111111] text-xl font-semibold">Donate
+          <li><button id="blog-btn" class="btn bg-[#B4F461] text-[#111111] text-base md:text-xl font-semibold">Blog</button></li>
+          <li class="flex gap-2 md:gap-4 items-center">
+            <img src="./assets/logo.png" alt="logo" /><span class="text-[#111111] text-base md:text-xl font-semibold">Donate
               Bangladesh</span>
           </li>
-          <li class="flex gap-2 items-center">
+          <li class="flex gap-1 md:gap-2 items-center">
             <img src="./assets/coin.png" alt="coin" /><span id="main-balance"
-              class="text-[#111111b3] text-xl font-medium">5500</span><span
-              class="text-[#111111b3] text-xl font-medium">BDT</span>
+              class="text-[#111111b3] text-sm md:text-xl font-medium">5500</span><span
+              class="text-[#111111b3] text-sm md:text-xl font-medium">BDT</span>
           </li>
         </ul>
       </div>
@@ -42,10 +42,10 @@
   </header>
 
   <section id="donate-section" class="mt-20">
-    <div class="container mx-auto flex gap-8 flex-col items-center">
-      <div class="flex flex-col md:flex-row gap-6 justify-between items-center border-gray-200 border rounded-xl p-8">
+    <div class="container mx-auto flex flex-col items-center">
+      <div class="flex flex-col md:flex-row gap-6 justify-between items-center border-gray-200 border rounded-xl p-6 md:p-8">
         <figure><img src="./assets/noakhali.png" alt="Noakhali Flood 2024" /></figure>
-        <div class="w-1/2 flex flex-col">
+        <div class="md:w-1/2 flex flex-col">
           <div class="badge flex items-center gap-2 border-none bg-gray-100 px-4 py-6 rounded-lg">
             <img src="./assets/coin.png" alt="coin" />
             <span id="n-amount" class="text-[#111111b2] text-lg">0</span>
