--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body style="font-family: 'Lexend', sans-serif">
   <header class="sticky top-0 ">
-    <nav class="py-6 bg-[#F9F7F3]">
+    <nav class="py-6 bg-[#F9F7F3] backdrop-blur">
       <div class="container mx-auto">
         <ul class="flex justify-between items-center">
           <li><button id="blog-btn" class="btn bg-[#B4F461] text-[#111111] text-base md:text-xl font-semibold">Blog</button></li>
